static/css/styles.css
/* ... */
@media (min-width: 1220px) {
    .total-available p {
        font-size: 18px;
    }

    .l-side-wrapper {
        flex: 0 0 12.5%;
        width: 12.5%;
    }
    .r-side-wrapper {
        flex: 0 0 12.5%;
        max-width: 12.5%;
    }
    /* size the main wrapper in the home page */
    .main-wrapper-home {
        flex: 1 0 75%;
    }

    .inner-wrapper-home {
        max-width: 95%;
    }
}


.row {
	margin-left: 0;
	margin-right: 0;
}


/* ========= list templates advert ====== */
.list_advert {
    width: 93%;
	margin: auto;
	/* align-items: center; */
}

.card-advert {
    background-color: rgb(88, 87, 87);
    /* width: fit-content; */
    margin: 10rem auto; 
    padding: 0px; 
    border: 2px solid black; 
    border-radius: 2em; 
}

.inner-card-advert {
    padding: 10% 5%;
    margin: auto;
    text-align: center;
}

/* 
Need to reorganize the name or call a parent custom class
 as it may affect other content
 */
.card, .card-body, .list-group-item  {
    background-color:rgb(191, 195, 188) ;
}


/* ================== Home page  ====================*/

/* === Banderol on homepage ==== */
.banderol {
    /* background-color: rgb(56, 9, 16); */
    background-color: rgb(40, 2, 7);
    text-align: center;
    padding: 0.75rem;
    margin: 0.5rem 0;
    border-radius: 2em;
}

.banderol h3 {
    color: rgb(243, 209, 16);
    text-align: center;
    padding-top: 0px;
    margin-bottom: 0px;
}



/*  Carousel for sample media display */

.carousel-scroll-wrapper {
    display: flex; 
    align-items: center;
    /* gap: 0.25rem; */
    padding: 0rem 0;
    margin: 0;
    position: relative;
    /* justify-content: space-between; */
}


.carousel-card {
    display: flex; 
    flex-wrap: nowrap; 
    padding: 0 0;
    overflow-x: auto;
    overflow-wrap: normal;
    gap: 0.25rem;
    scroll-snap-type: x mandatory;
    scrollbar-width: none;
    -ms-overflow-style: none;
    width: 95%;
    margin: auto;
    /* z-index: 1;
    position: relative; */
    /* border: saddlebrown solid 1px; */
}


.carousel-arrow {
    flex-shrink: 0;
    background-color: rgb(89, 85, 85);
    color: bisque;
    border: none;
    border-radius: 50%;
    width: 3rem;
    height: 3rem;
    font-size: xx-large;
    line-height: 1;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-bottom: 0.35rem;
    margin-bottom: 0.75rem;
    /* position: relative;
    z-index: 2; */
    /* transition: background-color 0.3s ease; */
    transition: transform 0.5s ease-out;
    opacity: 65%;
    
}

.carousel-arrow:hover  {
    background-color: rgb(48, 46, 46);
    color: rgb(224, 185, 57);
    border: solid 1px rgb(224, 185, 57);
    transition: background-color 0.2s ease-in;
    transform: scale(1.3);
    opacity: 95%;
}

.carousel-arrow--hidden {
    opacity: 0%;
    pointer-events: none; /* prevents clicking through an invisible button */
}

.carousel-arrow--left {
    padding-left: 4px;
    position: absolute;
    z-index: 5;
    left: 0px;
    /* margin-left: -0.1rem; */
    /* opacity: 75%; */
}
.carousel-arrow--right {
    padding-right: 4px;
    position: absolute;
    z-index: 5;
    right: 0px;
    /* margin-right: -0.1rem; */
    /* opacity: 75%; */
}



/* =============== Detail movie / Serie pages ================= */
.media-info-row-1 {
    /* margin-top: 5%; */
    text-align: center;

}
.media-info-row-2 {
    /* margin-top: 5%; */
    text-align: center;
}

.media-info-row-1 .casting {
    margin: 0.5rem 0.25rem;
    padding: 0;
}

/* Background image cover|banner */
.background-media-img {
    background-repeat: no-repeat; 
    background-size: contain; 
    width: 100%; 
    max-width: 100%;
}

/* ---  Row with vote average & watchlist buttons --- */
.detail-vote-buttons {
    display: flex; 
    flex-wrap: wrap; 
    justify-content: space-between;
    align-items: center;
    padding-top: 0.25rem;
    margin: auto;
    width: 98%;
}

@media (min-width: 768px) {
    .detail-vote-buttons {
        padding-top: 0.5rem;
    }
    .media-info-row-1 .casting {
        margin: 0.5rem 0.25rem 0.5rem 0.5rem;
    }
}

@media (min-width: 1200px) {
    .carousel-arrow--right {
        margin-right: 0rem;
    }
    .carousel-arrow--left {
        margin-left: 0rem;

    }

}

.detail-vote-avg-count {
    font-weight: 500; 
    background-color: rgba(53, 49, 49, 0.65); 
    border-radius: 2em; 
    padding: 0% 0.6rem;
    color: rgb(224, 185, 57, 0.75);
    margin-bottom: 0;
}

/* Space left for the background image and poster/content below */
.banner-space {
    padding-bottom: 30%;
}

.detail-title-poster {
    text-align: center;
}

.detail-poster {
    margin: auto; 
    padding: 0px;
}

.release-length {
    flex-wrap: nowrap;
    justify-content: space-between; 
    gap: clamp(0.5rem, 1vw, 1.5rem);
}


#trailers {
    padding-top: 1rem;
}

/* Trailer section */
.outer-trailer {
    padding-top: 1rem;
    max-height: 280px; 
    overflow-y: auto;
}

.display-trailer {
    display: flex; 
    flex-wrap: wrap; 
    justify-content: center;
    gap: 0.5rem;
    padding-top: 0.6rem; 
    padding-bottom: 0.6rem; 
    background-color:rgb(131, 125, 125);
    border-radius: 0.5em;
    box-sizing: border-box;
    width: 100%;
}

/*
 flex 47% to have 2 next to each other
 or 60-70% good ratio for one per row 
 */
.trailer-wrapper {
    /* Need to configure a good ratio depending on screen size */
    max-width: 560px;
    min-width: 280px;
    min-height: 200px;
    max-height: 373px;
    aspect-ratio: 16/9;
    flex: 0 0 47%;
    /* gap: 2px; */
}

.trailer-wrapper iframe {
    width: 100%;
    height: 100%;
    border-radius: 0.3em;
}

/* ----- Specific to serie detail page ------ */
.season-container {
    padding: 0 2%;
}

.season-scroll-wrapper {
    display: flex; 
    align-items: center;
    gap: 0.25rem;
    padding: 0rem 0;
    /* justify-content: space-between; */
}
/* ... */

